# deepfence_server/apiDocs/operation.go
@@ -125,6 +125,14 @@ func (d *OpenApiDocs) AddControlsOperations() {
 	d.AddOperation("getAgentInitControls", http.MethodPost, "/deepfence/controls/agent-init",
 		"Fetch Agent Init Actions", "Fetch initial actions for a given agent after it started",
 		http.StatusOK, []string{tagControls}, bearerToken, new(model.AgentId), new(controls.AgentControls))
+
+	d.AddOperation("getLatestAgentVersion", http.MethodGet, "/deepfence/controls/get-agent-version",
+		"Fetch latest agent version", "Fetch latest agent version to check for upgrade",
+		http.StatusOK, []string{tagControls}, bearerToken, new(model.AgentImageMetadata), new(model.AgentImageMetadata))
+
+	d.AddOperation("addAgentVersion", http.MethodPost, "/deepfence/controls/agent-version",
+		"Push new agent version", "Push new agent version",
+		http.StatusOK, []string{tagControls}, bearerToken, new(model.AgentImageMetadata), nil)
 }
 
 func (d *OpenApiDocs) AddCloudNodeOperations() {
